syntax = "proto3";

package dkg.dkgpb.v1;

import "google/protobuf/any.proto";

option go_package = "github.com/obolnetwork/charon/dkg/dkgpb/v1";

message BCastSigRequest {
  bytes  hash = 2;
}

message BCastSigResponse {
  bytes  signature = 2;
}

message BCastMessage {
  google.protobuf.Any message    = 2;
  repeated bytes      signatures = 3;
}